[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mikuapi"
version = "0.2.0"
description = "MikuAPI: A modern lightweight Python web framework"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Qwanwin" }
]

dependencies = [
    "uvicorn"
]

keywords = ["api", "framework", "fastapi", "web"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]


[project.scripts]
mikuapi = "mikuapi.cli:main"